--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -19,10 +20,28 @@ android {
     }
 }
 
+repositories{
+    jcenter()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.nineoldandroids:library:2.4.0'
+
+    //glide:  https://github.com/bumptech/glide/wiki
+    compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.android.support:support-v4:23.1.1'
+    //flowingdrawer:  https://github.com/mxn21/FlowingDrawer
     compile 'com.mxn.soul:flowingdrawer-core:1.2.0'
+    //bga-refreshlayout
+    compile 'cn.bingoogolapple:bga-refreshlayout:1.1.0@aar'
+    //AVLoadingIndicatorView:　https://github.com/81813780/AVLoadingIndicatorView
+    compile 'com.wang.avi:library:1.0.0'
+    //picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
