--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 22
+    buildToolsVersion '22.0.1'
 
     defaultConfig {
         applicationId "com.guanqing.subredditor"
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -18,6 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 repositories{
@@ -25,23 +26,22 @@ repositories{
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.nineoldandroids:library:2.4.0'
-
+    compile 'com.android.support:appcompat-v7:22.+'
+    compile 'com.android.support:design:22.+'
+    compile 'com.android.support:cardview-v7:22.+'
+    compile 'com.android.support:recyclerview-v7:22.+'
+    compile 'com.android.support:multidex'
     //glide:  https://github.com/bumptech/glide/wiki
     compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile 'com.android.support:support-v4:23.1.1'
-    //flowingdrawer:  https://github.com/mxn21/FlowingDrawer
+    compile 'com.android.support:support-v4:22.+'
+    //Subredditor:  https://github.com/mxn21/FlowingDrawer
     compile 'com.mxn.soul:flowingdrawer-core:1.2.0'
     //bga-refreshlayout
     compile 'cn.bingoogolapple:bga-refreshlayout:1.1.0@aar'
     //AVLoadingIndicatorView:　https://github.com/81813780/AVLoadingIndicatorView
-    compile 'com.wang.avi:library:1.0.0'
+    //compile 'com.wang.avi:library:1.0.0'
     //picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
 }
