--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        //maven url for Bmob
+        maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
     }
 }
 
