--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.guanqing.subredditor"
-        minSdkVersion 14
+        minSdkVersion 21
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -18,7 +18,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    lintOptions {
+        abortOnError false
+    }
 }
 
 repositories{
@@ -26,13 +28,13 @@ repositories{
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    //compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:22.+'
     compile 'com.android.support:design:22.+'
     compile 'com.android.support:cardview-v7:22.+'
     compile 'com.android.support:recyclerview-v7:22.+'
-    compile 'com.android.support:multidex'
+    //compile 'com.android.support:multidex'
     //glide:  https://github.com/bumptech/glide/wiki
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.android.support:support-v4:22.+'
@@ -41,7 +43,10 @@ dependencies {
     //bga-refreshlayout
     compile 'cn.bingoogolapple:bga-refreshlayout:1.1.0@aar'
     //AVLoadingIndicatorView:　https://github.com/81813780/AVLoadingIndicatorView
-    //compile 'com.wang.avi:library:1.0.0'
+    compile 'com.wang.avi:library:1.0.1'
     //picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+
 }
