--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,16 +34,21 @@ dependencies {
     compile 'com.android.support:design:22.+'
     compile 'com.android.support:cardview-v7:22.+'
     compile 'com.android.support:recyclerview-v7:22.+'
-    //compile 'com.android.support:multidex'
+    compile 'com.android.support:support-v4:22.+'
+
     //glide:  https://github.com/bumptech/glide/wiki
     compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile 'com.android.support:support-v4:22.+'
+
     //Subredditor:  https://github.com/mxn21/FlowingDrawer
     compile 'com.mxn.soul:flowingdrawer-core:1.2.0'
+
     //bga-refreshlayout
-    compile 'cn.bingoogolapple:bga-refreshlayout:1.1.0@aar'
+    compile 'cn.bingoogolapple:bga-refreshlayout:1.1.1@aar'
+
     //AVLoadingIndicatorView:　https://github.com/81813780/AVLoadingIndicatorView
-    compile 'com.wang.avi:library:1.0.1'
+    //compile 'com.wang.avi:library:1.0.1'
+    compile project(':avLoadingIndicator')
+
     //picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
 
