--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,20 +29,20 @@ android {
 
 repositories{
     jcenter()
-    maven {
+/*    maven {
         url "http://dl.bintray.com/glomadrian/maven"
-    }
+    }*/
 }
 
 dependencies {
-    //compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(":gif_firstframe")
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:22.+'
     compile 'com.android.support:design:22.+'
     compile 'com.android.support:cardview-v7:22.+'
     compile 'com.android.support:recyclerview-v7:22.+'
     compile 'com.android.support:support-v4:22.+'
+
     //glide:  https://github.com/bumptech/glide/wiki
     compile 'com.github.bumptech.glide:glide:3.6.1'
     //FlowingDrawer:  https://github.com/mxn21/FlowingDrawer
