--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,41 +21,38 @@ android {
     lintOptions {
         abortOnError false
     }
-    packagingOptions{
+    packagingOptions {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
     }
 }
 
-repositories{
+repositories {
     jcenter()
-/*    maven {
-        url "http://dl.bintray.com/glomadrian/maven"
-    }*/
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:22.+'
-    compile 'com.android.support:design:22.+'
-    compile 'com.android.support:cardview-v7:22.+'
-    compile 'com.android.support:recyclerview-v7:22.+'
-    compile 'com.android.support:support-v4:22.+'
 
     //glide:  https://github.com/bumptech/glide/wiki
-    compile 'com.github.bumptech.glide:glide:3.6.1'
     //FlowingDrawer:  https://github.com/mxn21/FlowingDrawer
-    compile 'com.mxn.soul:flowingdrawer-core:1.2.0'
     //bga-refreshlayout:  https://github.com/bingoogolapple/BGARefreshLayout-Android
-    compile 'cn.bingoogolapple:bga-refreshlayout:1.1.2@aar'
     //Volley
-    compile 'com.mcxiaoke.volley:library:1.0.19'
     //JRAW
-    compile 'net.dean.jraw:JRAW:0.7.1'
     //https://github.com/castorflex/SmoothProgressBar
+    //Eventbus
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:design:22.2.1'
+    compile 'com.android.support:cardview-v7:22.2.1'
+    compile 'com.android.support:recyclerview-v7:22.2.1'
+    compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.mxn.soul:flowingdrawer-core:1.2.0'
+    compile 'cn.bingoogolapple:bga-refreshlayout:1.1.2@aar'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'net.dean.jraw:JRAW:0.7.1'
     compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
-    //Eventbus
     compile 'de.greenrobot:eventbus:2.4.1'
 }
