--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,19 +29,13 @@ android {
 
 repositories {
     jcenter()
+    maven { url "http://jzaccone.github.io/SlidingMenu-aar" }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
 
-    //glide:  https://github.com/bumptech/glide/wiki
-    //FlowingDrawer:  https://github.com/mxn21/FlowingDrawer
-    //bga-refreshlayout:  https://github.com/bingoogolapple/BGARefreshLayout-Android
-    //Volley
-    //JRAW
-    //https://github.com/castorflex/SmoothProgressBar
-    //Eventbus
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
     compile 'com.android.support:cardview-v7:22.2.1'
@@ -52,7 +46,7 @@ dependencies {
     compile 'cn.bingoogolapple:bga-refreshlayout:1.1.2@aar'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'net.dean.jraw:JRAW:0.7.1'
-    compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
     compile 'de.greenrobot:eventbus:2.4.1'
+    compile 'com.jeremyfeinstein.slidingmenu:library:1.3@aar'
 }
