--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,10 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.mxn.soul:flowingdrawer-core:1.2.0'
     compile 'cn.bingoogolapple:bga-refreshlayout:1.1.2@aar'
+    compile 'cn.bingoogolapple:bga-adapter:1.0.9@aar'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'net.dean.jraw:JRAW:0.7.1'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
     compile 'de.greenrobot:eventbus:2.4.1'
-    compile 'com.jeremyfeinstein.slidingmenu:library:1.3@aar'
+    //compile 'com.jeremyfeinstein.slidingmenu:library:1.3@aar'
 }
