--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
     compile 'de.greenrobot:eventbus:2.4.1'
     //compile 'com.jeremyfeinstein.slidingmenu:library:1.3@aar'
+
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile "com.squareup.retrofit:converter-gson:2.0.0-beta2"
 }
