--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activities.MainActivity"
+            android:name=".UI.Activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -26,12 +26,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activities.LoginActivity"
+            android:name=".UI.Activities.LoginActivity"
             android:label="@string/title_activity_login"
-            android:parentActivityName=".Activities.MainActivity">
-            <meta-data
+            android:parentActivityName=".UI.Activities.MainActivity">
+            <meta-imageData
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.guanqing.subredditor.Activities.MainActivity" />
+                android:value=".UI.Activities.MainActivity" />
         </activity>
     </application>
 
