--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
 
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile "com.squareup.retrofit:converter-gson:2.0.0-beta2"
+
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
