--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,16 +7,15 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".App"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".UI.Activities.MainActivity"
+            android:name=".ui.activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -26,12 +25,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".UI.Activities.LoginActivity"
+            android:name=".ui.activities.LoginActivity"
             android:label="@string/title_activity_login"
-            android:parentActivityName=".UI.Activities.MainActivity">
+            android:parentActivityName=".ui.activities.MainActivity">
             <meta-imageData
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".UI.Activities.MainActivity" />
+                android:value=".ui.activities.MainActivity" />
+        </activity>& 
+        <activity
+            android:name=".ui.activities.WebViewActivity"
+            android:label="@string/title_activity_webview"
+            android:parentActivityName=".ui.activities.MainActivity">
+
         </activity>
     </application>
 
