--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.activities.MainActivity"
+            android:name=".UI.Activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -25,17 +25,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activities.LoginActivity"
+            android:name=".UI.Activities.LoginActivity"
             android:label="@string/title_activity_login"
-            android:parentActivityName=".ui.activities.MainActivity">
+            android:parentActivityName=".UI.Activities.MainActivity">
             <meta-imageData
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.activities.MainActivity" />
-        </activity>& 
+        </activity>
         <activity
-            android:name=".ui.activities.WebViewActivity"
+            android:name=".UI.Activities.WebViewActivity"
             android:label="@string/title_activity_webview"
-            android:parentActivityName=".ui.activities.MainActivity">
+            android:parentActivityName=".UI.Activities.MainActivity">
 
         </activity>
     </application>
