--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion '22.0.1'
+    buildToolsVersion '23.0.1'
 
     defaultConfig {
         applicationId "com.guanqing.subredditor"
@@ -36,9 +36,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
+    compile 'com.android.support:support-v4:22.2.1'
     compile 'com.android.support:cardview-v7:22.2.1'
     compile 'com.android.support:recyclerview-v7:22.2.1'
-    compile 'com.android.support:support-v4:22.2.1'
+
 
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.mxn.soul:flowingdrawer-core:1.2.0'
@@ -48,7 +49,11 @@ dependencies {
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
     compile 'de.greenrobot:eventbus:2.4.1'
     //compile 'com.jeremyfeinstein.slidingmenu:library:1.3@aar'
+
+    //Retrofit
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+
+    //butterknife
     compile 'com.jakewharton:butterknife:7.0.1'
 }
